Fix broken style

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -18,7 +18,7 @@ body {
 }
 
 #root {
-  display: 'flex';
+  display: flex;
 }
 
 /** Canvas **/
